<resources>
    <string name="app_name">Little Music</string>

    <string name="new_user_signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email_example">abc@example.com</string>
    <string name="password_hint">********</string>
    <string name="do_you_want_to_logout">Do you want to log out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="do_you_want_to_exit">Do you want to Exit ?</string>
    <string name="about_app">The application was designed by "Flat Code"</string>
    <string name="none_display">There are no items to display</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all">All</string>
    <string name="songs">Songs</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="artists">Artists</string>
    <string name="my_artists">My Artists</string>
    <string name="albums">Albums</string>
    <string name="my_albums">My Albums</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_songs">My Songs</string>
    <string name="editors_choice">Editors Choice</string>
    <string name="most_views">Most Views</string>
    <string name="most_loves">Most Loves</string>
    <string name="new_songs">New Songs</string>
    <string name="favorites">Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="my_categories">My Categories</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="artists_count">Artists count</string>
    <string name="albums_count">Albums count</string>
    <string name="categories_count">Categories count</string>
    <string name="favorites_count">Favorites count</string>
    <string name="love">Love</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="most_songs">Most Songs</string>
    <string name="most_interested">Most Interested</string>
    <string name="most_albums">Most Albums</string>
    <string name="about_the_artist">About The Artist</string>
    <string name="crop_image">Crop Image</string>
    <string name="zero">0</string>
    <string name="count_format">( %d )</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>