<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    android:id="@+id/scrollSwitchUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5sp"
    android:orientation="horizontal"
    android:scrollbarSize="0dp"
    android:scrollbarThumbHorizontal="@color/white">

    <LinearLayout
        android:id="@+id/linearSwitchUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:elevation="6sp"
            app:cardCornerRadius="10sp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?mc_bg"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:elevation="6sp"
            app:cardCornerRadius="10sp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?mc_bg"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mostSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:elevation="6sp"
            app:cardCornerRadius="10sp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?mc_bg"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/most_songs"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mostInterested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:elevation="6sp"
            app:cardCornerRadius="10sp"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?mc_bg"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/most_interested"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</HorizontalScrollView>
