<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?mc_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="?mc_bg"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="50sp"
                    android:background="@drawable/round"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

            </LinearLayout>

        </LinearLayout>

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?mc_track"
                android:textSize="24sp"
                android:textStyle="bold" />

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <io.selimdawa.rippleeffect.MaterialRippleEffect
                style="@style/RippleStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?mc_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/about_app"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </io.selimdawa.rippleeffect.MaterialRippleEffect>

        </androidx.core.widget.NestedScrollView>

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_web"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/website"
                android:textColor="?mc_track"
                android:textSize="21sp"
                android:textStyle="bold" />

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/facebook_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/facebook"
                android:textColor="?mc_track"
                android:textSize="21sp"
                android:textStyle="bold" />

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>